--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
-    "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
     "node-sass": "^7.0.3",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-cropper": "^2.3.3",
@@ -28,8 +26,12 @@
     "react-query": "^3.39.3",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
-    "tailwindcss": "3.3.2",
     "typed.js": "^2.0.16",
     "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
