--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.20.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.41.0",
-    "eslint-config-next": "13.4.3",
-    "next": "13.4.3",
-    "node-sass": "^7.0.3",
+    "eslint-config-next": "13.4.4",
+    "next": "13.4.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.44.2",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
     "sass": "^1.62.1",
