--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.3.2",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^10.12.12",
     "next": "13.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
