--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "export": "next build && next export"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "@tabler/icons-react": "^2.20.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.44.2",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
+    "react-use": "^17.4.0",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
     "typed.js": "^2.0.16",
