--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@tabler/icons-react": "^2.20.0",
+    "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -21,12 +22,15 @@
     "next": "13.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-advanced-cropper": "^0.19.3",
     "react-countup": "^6.4.2",
     "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.2",
+    "react-icons": "^4.9.0",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
@@ -34,6 +38,8 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/node": "20.2.5",
+    "@types/react": "18.2.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
