--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
