--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-countup": "^6.4.2",
     "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "react-multi-select-component": "^4.3.4",
