--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.9.0",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
+    "react-responsive": "^9.0.2",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "sass": "^1.62.1",
