--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
+    "react-input-range": "^1.3.0",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
