--- a/package.json
+++ b/package.json
@@ -20,17 +20,19 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.12",
+    "leaflet": "^1.9.4",
     "next": "13.4.4",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-advanced-cropper": "^0.19.3",
     "react-countup": "^6.4.2",
     "react-cropper": "^2.3.3",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.44.2",
     "react-icons": "^4.9.0",
     "react-input-range": "^1.3.0",
+    "react-leaflet": "^4.2.1",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
