--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-advanced-cropper": "^0.19.3",
     "react-countup": "^6.4.2",
     "react-cropper": "^2.3.3",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.44.2",
@@ -36,6 +37,7 @@
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
+    "react-time-picker": "^6.5.0",
     "react-toastify": "^9.1.3",
     "react-use": "^17.4.0",
     "sass": "^1.62.1",
