--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.62.1",
     "swiper": "^9.3.2",
+    "toastr": "^2.1.4",
     "typed.js": "^2.0.16",
     "zustand": "^4.3.8"
   },
