--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.12",
