verify-email-otp

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 NETLIFY_NEXT_PLUGIN_SKIP=true
+
+
+
+GOOGLE_CLIENT_ID=242152562184-vlt71oitkv08sbspfe6v6i2bi6nnu3i7.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=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
