--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "leaflet": "^1.9.4",
     "mixpanel-browser": "^2.47.0",
     "next": "13.4.4",
+    "next-auth": "^4.24.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-advanced-cropper": "^0.19.3",
