--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@nextui-org/react": "^2.3.6",
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
