--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@mdxeditor/editor": "^3.0.8",
     "@nextui-org/react": "^2.3.6",
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^4.29.12",
@@ -38,6 +39,7 @@
     "react-icons": "^4.9.0",
     "react-input-range": "^1.3.0",
     "react-leaflet": "^4.2.1",
+    "react-markdown": "^9.0.1",
     "react-multi-select-component": "^4.3.4",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
