--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.3.6",
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^4.29.12",
+    "@vis.gl/react-google-maps": "^1.1.0",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
