--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@heroui/react": "^2.6.14",
     "@tabler/icons-react": "^2.20.0",
     "@tanstack/react-query": "^4.29.12",
     "aos": "^2.3.4",
@@ -20,7 +21,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "framer-motion": "^10.12.12",
+    "framer-motion": "^10.18.0",
     "leaflet": "^1.9.4",
     "mixpanel-browser": "^2.47.0",
     "next": "13.4.4",
